--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,3 +1,9 @@
+  macro_language: macro_language {
+    compatible = "zmk,behavior-macro";
+    label = "macro_language";
+    #binding-cells = <0>;
+    bindings = <&macro_press &kp LCTRL>, <&macro_tap &kp GRAVE>, <&macro_release &kp LCTRL>;
+  };
   macro_quotes: macro_quotes {
     compatible = "zmk,behavior-macro";
     label = "macro_quotes";
