--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -4,6 +4,18 @@
     #binding-cells = <0>;
     bindings = <&macro_press &kp LCTRL>, <&macro_tap &kp GRAVE>, <&macro_release &kp LCTRL>;
   };
+  macro_tabup: macro_tabup {
+    compatible = "zmk,behavior-macro";
+    label = "macro_tabup";
+    #binding-cells = <0>;
+    bindings = <&macro_press &kp LCTRL>, <&macro_tap &kp PG_UP>, <&macro_release &kp LCTRL>;
+  };
+  macro_tabdown: macro_tabdown {
+    compatible = "zmk,behavior-macro";
+    label = "macro_tabdown";
+    #binding-cells = <0>;
+    bindings = <&macro_press &kp LCTRL>, <&macro_tap &kp PG_DN>, <&macro_release &kp LCTRL>;
+  };
   macro_quotes: macro_quotes {
     compatible = "zmk,behavior-macro";
     label = "macro_quotes";
